[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/TROTTENET - Highscores.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Highscores.gd" type="Script" id=2]
[ext_resource path="res://Assets/Buttons/TROTTENET - Invisible.png" type="Texture" id=3]
[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Buttons/TROTTENET - HighscoresToMenu.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[node name="Highscores" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 1 )
hframes = 4

[node name="Forest" type="TextureButton" parent="."]
margin_right = 80.0
margin_bottom = 15.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space" type="TextureButton" parent="."]
margin_left = 80.0
margin_right = 160.0
margin_bottom = 15.0
texture_normal = ExtResource( 3 )

[node name="City" type="TextureButton" parent="."]
margin_left = 160.0
margin_right = 240.0
margin_bottom = 15.0
texture_normal = ExtResource( 3 )

[node name="InProgress" type="TextureButton" parent="."]
margin_left = 240.0
margin_right = 320.0
margin_bottom = 15.0
texture_normal = ExtResource( 3 )

[node name="Menu" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 282.0
margin_top = 152.0
margin_right = 315.0
margin_bottom = 175.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forest_score_01" type="Label" parent="VBoxContainer"]
margin_right = 20.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "1."

[node name="forest_score_02" type="Label" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 20.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "2."

[node name="forest_score_03" type="Label" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 20.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "3."

[connection signal="pressed" from="Forest" to="." method="_on_Forest_pressed"]
[connection signal="pressed" from="Space" to="." method="_on_Space_pressed"]
[connection signal="pressed" from="City" to="." method="_on_City_pressed"]
[connection signal="pressed" from="InProgress" to="." method="_on_InProgress_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
